# SNU_CktSim_NGautam

./: .clang-format  CMakeLists.txt  README.md  circuit.sns
include/: Capacitor.hpp  CircuitElement.hpp  CurrentSource.hpp  DependentCurrentSource.hpp  DependentVoltageSource.hpp  Edge.hpp  Inductor.hpp  Node.hpp  NonlinearCapacitor.hpp  NonlinearInductor.hpp  NonlinearModel.hpp  Parser.hpp  Resistor.hpp  Solver.hpp  SolverOptions.hpp  VoltageSource.hpp  main.hpp
src/: CMakeLists.txt  CircuitElement.cpp  main.cpp
src/Elements/Linear/: Capacitor.cpp  CurrentSource.cpp  DependentCurrentSource.cpp  DependentVoltageSource.cpp  Inductor.cpp  Resistor.cpp  VoltageSource.cpp
src/Elements/Nonlinear/: NonlinearCapacitor.cpp  NonlinearInductor.cpp
src/Node/: Node.cpp
src/Parser/: Parser.cpp
src/Solver/: Solver.cpp
tests/: CMakeLists.txt
tests/elements/capacitor/: capacitor_test.cpp
tests/elements/current/: current_test.cpp
tests/elements/dependent_current/: dependent_current_test.cpp
tests/elements/dependent_voltage/: dependent_voltage_test.cpp
tests/elements/inductor/: inductor_test.cpp
tests/elements/nonlinear/: nonlinear_capacitor_test.cpp  nonlinear_inductor_test.cpp
tests/elements/resistor/: resistor_test.cpp
tests/elements/voltage/: voltage_test.cpp
tests/parser/: parse_value_test.cpp  validate_nodes_test.cpp  validate_tokens_test.cpp
